# turnone

./: .gitignore  CQL_PLAN.md  LICENSE  README.md  pyproject.toml
configs/: bc_autoregressive.yaml  bc_base.yaml  cql_base.yaml  dynamics_base.yaml  dynamics_canon.yaml  dynamics_d128.yaml  dynamics_v2.yaml
docs/: PROJECT_BIBLE.md  phase1_workflow.md  phase2_workflow.md  why_pivot.md
paper/: final.tex  milestone.bib  references.bib
results/: dynamics_metrics.json  exploitability_results.json  matchup_details.jsonl  mutual_info.json
results/audit/: audit_results.json
results/autoreg_v1/: exploitability_results.json  matchup_details.jsonl
results/autoreg_v2/: dynamics_metrics.json  exploitability_results.json  matchup_details.jsonl
results/case_studies/: case_studies.json
results/cql_eval/: cql_eval.json
scripts/: assemble_splits.py  audit.py  build_split_map.py  capacity_consensus.py  case_studies.py  counterfactual_analysis.py  cql_eval.py  evaluate.py  exploitation_analysis.py  exploitation_case_studies.py  gen_move_targets.py  generate_figures.py  interaction_term.py  mixture_exploit.py  mutual_info.py  noise_sensitivity.py  parse_turn1.py  phase2_cache.py  phase2_indifference.py  phase2_qre.py  phase2_regret.py  phase2_svd.py  projection_analysis.py  rank_reduction_test.py  reward_sensitivity.py  smoothed_br.py  tera_decomposition.py  value_decomposition.py
tests/: test_action_space.py  test_bootstrap.py  test_cql.py  test_dynamics.py  test_metrics.py  test_model.py  test_nash.py  test_parser.py  test_payoff.py  test_reward.py  test_train.py
(+42 files in other folders)
