[project]
name = "turnone"
version = "0.1.0"
description = "Learning Turn-1 Play in Pokemon VGC"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "numpy",
    "pyyaml",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]

